--- a/practica5/index.html
+++ b/practica5/index.html
@@ -8,6 +8,7 @@
 
 	 		alert($('#elemento1').css('fontSize'));
 	 		$('#elemento1').css('fontSize', '100px');
+	 		$('#elemento1').css('color', 'DarkOrchid');
 	 		alert($('#elemento1').css('fontSize'));
 	 		$('#elemento1').hide('slow');
 	 		$('#elemento1').show('slow');
